# Claude-Bridge

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  server.json  server.py  start-bridge.bat  start-bridge.sh  start-tui.bat  start-tui.sh  tui.py  tui_client.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
claude_bridge/: __init__.py  __main__.py  auth.py  cli.py  server.py  tui.py  tui_client.py
claude_bridge/web/: app.jsx  dashboard-desktop.jsx  dashboard-mobile.jsx  index.html
docs/design/: README.md  dashboard-desktop.jsx  dashboard-mobile.jsx  index.html  landing-hero.jsx  logo-sheet.jsx  tokens-sheet.jsx
docs/design/terminal/: README.md  index.html  shared.jsx  tui-components.jsx  tui-core.jsx  tui-full.jsx  tui-startup.jsx  tui-states.jsx  tui-variants.jsx
tests/: conftest.py  test_api.py  test_auth.py  test_bridge.py  test_sse.py  test_tui_client.py
web/: app.jsx  dashboard-desktop.jsx  dashboard-mobile.jsx  index.html  shared.jsx
